[package]
authors = ["matonix <automatonix@gmail.com>"]
edition = "2018"
name = "dezero"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.3", features = ["approx"]}
ndarray-rand = "0.14.0"
num-traits = "0.2.14"

[lib]
name = "dezero"
path = "src/dezero.rs"
